# epg2xml

./: .gitignore  CONTRIBUTION.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: stats.yml  test-all.yml  test.yml
epg2xml/: __init__.py  __main__.py  config.py  id_format.py  utils.py
epg2xml/providers/: __init__.py  all.py  btv.py  daum.py  kbs.py  kt.py  lg.py  mbc.py  naver.py  sbs.py  sk.py  spotv.py  tving.py  wavve.py
scripts/: check_provider.py
tests/: test_config.py  test_duplicate_channel_ids.py  test_id_format.py  test_main.py  test_provider.py
